--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -5,6 +5,9 @@
     <title>Midgard Dashboard!</title>
 	<link rel="stylesheet" href="./css/styles.css">
   <script>window.$ = window.jQuery = require('./js/jquery.js');</script>
+  <script>window.Hammer = require('./js/hammer.min.js');</script>
+  <script src="./js/phaser.js"></script> 
+  <script src="./js/visibility_polygon.js"></script> 
   <script src="./js/vendor.js"></script> 
   <script src="./js/all.js"></script> 
   </head>
@@ -25,7 +28,7 @@
       </div>       
     </div>
     <div id="kampf">
-      
+      <div id="phaser-example"></div>
     </div>
   </div>
   </div>
